--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "disposable-email-domains",
-  "version": "1.0.1",
+  "version": "1.0.2",
+  "main": "index.js",
   "description": "Forked from martenson/disposable-email-domains and a package.json added",
   "repository": {
     "type": "git",
